--- a/icalendar.erb
+++ b/icalendar.erb
@@ -9,8 +9,8 @@ DTSTART:<%= time_to_ical episode.airtime %>
 DTEND:<%= time_to_ical (episode.airtime + (25 * 60)) %>
 UID:<%= episode.uid %>
 DESCRIPTION:<%= escape wrap(episode.show.description, 12) %>
-LOCATION:<%= escape wrap(episode.station, 9) %>
-SUMMARY:<%= escape wrap("#{episode.show.title} Ep. #{episode.number}", 8) %>
+<% if episode.station then %>LOCATION:<%= escape wrap(episode.station, 9) %>
+<% end %>SUMMARY:<%= escape wrap("#{episode.show.title} Ep. #{episode.number}", 8) %>
 TRANSP:TRANSPARENT
 END:VEVENT<% end %>
 END:VCALENDAR
